--- a/Frontend mentor/index.html
+++ b/Frontend mentor/index.html
@@ -25,7 +25,7 @@
                         <div class="box-widget-2"><a href="">Change</a></div>
                       </div>
                     <button class="payment">Proceed to Payment</button>
-                    <p class="cancel">Cancel Order</p>
+                    <p class="cancel"><a href="">Cancel Order</a></p>
                   </div>
               </div>
           </div>
